--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="twitter:site" content="@appwrite" />
+        <meta name="twitter:site" content="@NeuroFin" />
         <link rel="icon" type="image/svg+xml" href="/images/logos/logo.svg" />
         <!-- preload font for headlines -->
         <link
